@@ -13,6 +13,7 @@
     "(?) space-exploration-postprocess",
     "(?) angelsrefining",
     "(?) angelsbioprocessing",
-    "(?) omnimatter"
+    "(?) omnimatter",
+    "(?) ev-refining"
   ]
 }
